# libjane

./: Cargo.toml  README.md
src/: error.rs  errors.rs  functions.rs  graph.rs  image_gen.rs  layer.rs  lib.rs
src/graph/: math.rs  point.rs
src/layer/: graph.rs
